<resources>
    <string name="app_name">CONTADOR-PARA-ENTREGAR</string>

    <!--PANTALLA-->
    <string name="creditos">Creditos: Nerea ZJ</string>
    <string name="titulo_p">Clicka por que te aburres</string>

    <!--BOTONES DE ACCION / OTROS-->
    <string name="jugar">Jugar</string>
    <string name="Informacion">Información</string>
    <string name="exit">Salir</string>
    <string name="opciones">Opciones</string>
    <string name="no_op">Pusa para ver las opciones</string>
    <string name="atras">Atrás</string>

    <!--BOTONES DE MEJORA-->
    <string name="multiplicador">Multiplicador Coste: 100</string>
    <string name="clicks">Aumenta Coste: 100</string>
    <string name="autoclick">AutoClick Coste: 10</string>

    <!--iNFORMACION-->
    <string name="menti">Click por aburrimiento :)</string>
    <string name="equipos">Equipos de la saga Inazuma Eleven</string>
    <string name="personajes">Personajes de la saga Inazuma Eleven</string>
    <string name="info">Bienvenido a la informacion, aqui tienes la informacion del juego,
        tendras un boton donde clickar para conseguir ""goles"" y luego esos ""goles"", cangearlos por recompesas.
        En el juego propio tienes un ranking (actualmente no funciona)</string>


    <!--EQUIPOS-->
    <string name="equipo_rec">Lista de los equipos</string>
    <string name="personajes_list">Lista de (algunos) personajes</string>'

    <!--Mercazuma-->
    <string name="titulo_m">Mercazuma</string>
    <string name="des_mercazuma">Gasta aquí tus puntos de pasion y amistad</string>
    <string name="mb">Supertecnicas de tiro: Aullido de Lobo</string>
    <string name="ac">Supertecnica: Carrera Relámpago</string>
    <string name="vol">Volver al juego</string>
    <string name="contadorclicks">Tus puntos de Pasión y Amistad: </string>


    <!--MENUS CONTEXTUALES-->

    <string name="mh">Monster High</string>
    <string name="back">Cambien Imagen</string>
    <string name="musica">Musica :)</string>

    <!--MONSTER HIGH-->
    <string name="mhp">Algunos Personajes de Monster High</string>


    <!--MUSICA-->
    <string name="monsterhigh">Monster High</string>
    <string name="ie">Inazuma Eleven</string>
    <string name="lol">Paranoia (LoL)</string>

    <string name="pas">Pausar</string>
    <string name="stop">Stop</string>

    <!--INICIAR SESION CUENTAS-->

    <string name="nu">Nombre Usuario</string>
    <string name="con">Contraseña</string>
    <string name="conf">Confrima contraseña</string>
    <string name="reg">Registrarse</string>
    <string name="in">Iniciar Sesion</string>
    <string name="pre">¿Ya tienes una cuenta?</string>
    <string name="pr">¿No tienes una cuenta?</string>


    <!--COMENTARIO BASE-->
</resources>